--- a/index.html
+++ b/index.html
@@ -3,30 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Ledge Financial Services</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Ledge Financial Services</h1>
+            <nav>
+                <ul>
+                    <li><a href="#services">Our Services</a></li>
+                    <li><a href="#blogs">Blog</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <section id="about">
-        <h2>About Us</h2>
-        <p>This is where you tell your story.</p>
+
+    <section id="hero">
+        <div class="container">
+            <h2>Simple Solutions for Your Long-Term Wealth Creation</h2>
+            <p>We specialize in building mutual fund portfolios and offer equity broking services to help secure your financial future.</p>
+        </div>
     </section>
+
     <section id="services">
-        <h2>Services</h2>
-        <p>Describe what you offer.</p>
+        <div class="container">
+            <h2>Our Services</h2>
+            <div class="service">
+                <h3>Mutual Fund Portfolios</h3>
+                <p>Tailored portfolios designed for long-term wealth creation and financial stability.</p>
+            </div>
+            <div class="service">
+                <h3>Equity Broking</h3>
+                <p>Access reliable and efficient equity trading services to grow your investments.</p>
+            </div>
+        </div>
     </section>
+
+    <section id="blogs">
+        <div class="container">
+            <h2>Our Blog</h2>
+            <p>Stay informed with our latest updates and financial tips.</p>
+            <form class="subscribe-form">
+                <label for="email">Subscribe to our blog updates:</label>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>We'd love to hear from you. Fill out the form below and we’ll get back to you.</p>
+            <form class="contact-form" action="https://formsubmit.co/p14varuns@iima.ac.in" method="POST">
+                <label for="name">Your Name:</label>
+                <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                
+                <label for="phone">Contact Number:</label>
+                <input type="tel" id="phone" name="phone" placeholder="Enter your contact number" required>
+                
+                <button type="submit">Submit</button>
+            </form>            
+        </div>
+    </section>
+
     <footer>
-        <p>&copy; 2024 My Website</p>
+        <div class="container">
+            <p>&copy; 2024 Ledge Financial Services. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
